Fix alignment of items in trending section. Add border-radius to trending and announcement sections. Adding padding to header and gap between header rows.

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 3fr;
+    box-sizing: border-box;
 }
 
 .photo {
@@ -87,8 +88,9 @@ body {
     grid-row: 1;
     display: grid;
     grid-template-rows: 1fr 1fr;
-    padding-right: 16px;
+    padding: 1rem;
     box-shadow: 2px 2px 2px grey;
+    row-gap: 10px;
 }
 
 .header-row1 {
@@ -150,12 +152,25 @@ body {
     gap: 20px;
 }
 
+.subsection-cards {
+    border-radius: 5px;
+}
+
 .subsection-cards .subsection-card:nth-child(-n + 2) {
     box-shadow: 0 2px 2px -2px grey;
 }
 
 .subsection-card {
     padding-bottom: 10px;
+}
+
+.subsection-cards .little-photo-dark {
+    grid-column: 1;
+}
+
+.subsection-cards .userinfo {
+    grid-column: 2;
+    justify-self: start;
 }
 
 .subheading {
@@ -166,10 +181,17 @@ body {
 .trending {
     display: grid;
     grid-template-rows: 1fr 10fr;
+    border-radius: 5px;
+    box-shadow: 0 2px 2px -2px grey;
 }
 
 .trending .subsection-cards {
     display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    background-color: white;
+    place-items: center;
+    padding: 1rem;
 }
 
 .searchbar input[type="text"] {
@@ -234,9 +256,6 @@ body {
     gap: 20px;
 }
 
-.subsection-cards .trending-row {
-    background-color: white;
-}
 
 .header-button {
     color: white;
@@ -262,14 +281,7 @@ body {
     grid-row: 1 / -1;
 }
 
-.trending-row {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    place-items: center;
-    padding-right: 1rem;
-    padding-left: 0.5rem;
 
-}
 
 .userinfo {
     display: flex;
